# faster-lio

./: BUILD_INSTRUCTIONS.md  CMakeLists.txt  CUDA_DEVELOPMENT_GUIDE.md  package.xml
app/: CMakeLists.txt  save_optimized_map_client.cc
cmake/: packages.cmake
config/: avia.yaml
doc/: CUDA_ACCELERATION_IMPLEMENTATION.md  CUDA_JETSON_COMPATIBILITY.md  OPTIMIZED_MAP_SAVING.md
include/: common_lib.h  cuda_utils.h  jetson_optimizations.h  laser_mapping.h  map_compression.h  options.h  pointcloud_preprocess.h
include/ivox3d/: eigen_types.h  ivox3d.h
launch/: faster_lio_pgo.launch  mapping_avia_with_pgo.launch  mapping_ouster64_pgo.launch  mapping_with_optimized_save.launch
rviz_cfg/: loam_livox.rviz
scripts/: build_both_versions.sh  save_optimized_map.py  test_platform_compatibility.py  test_service.py
src/: CMakeLists.txt  cuda_utils.cu  cuda_utils_cpu.cc  cuda_utils_impl.cu  cuda_utils_wrapper.cc  jetson_optimizations.cc  laser_mapping.cc  map_compression.cc  pointcloud_preprocess.cc
srv/: SaveOptimizedMap.srv
